samples/_failures_safe/1761523871_dfd9a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f96bf90.c: In function ‘main’:
./samples/SAFE/__tmp_3f96bf90.c:134:17: error: expected ‘;’ at end of input
  134 |     matrix_print
      |                 ^
      |                 ;
./samples/SAFE/__tmp_3f96bf90.c:134:5: error: expected declaration or statement at end of input
  134 |     matrix_print
      |     ^~~~~~~~~~~~
